fixed editor overflow hidden problem

--- a/client/src/components/Notes/Notes.css
+++ b/client/src/components/Notes/Notes.css
@@ -1,7 +1,7 @@
 .notes-page-wrapper {
   /* height: 100vh; */
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
   display: flex;
   flex-direction: column;
 }
